fix centre align firefox

--- a/components/Features/index.scss
+++ b/components/Features/index.scss
@@ -26,6 +26,8 @@
 
 .feature {
   width: 280px;
+  display: flex;
+  flex-direction: column;
 }
 
 .kindle {
